fixes issue with icon alignment

--- a/src/views/items.less
+++ b/src/views/items.less
@@ -149,7 +149,7 @@
 
     width: 1.4em;
     height: 1.5em;
-    padding: 0.1em 0.1em 0em 0em;
+    padding: 0.25em 0.1em 0em 0em;
 
     color: #AAAAAA;
     font-size: 0.9em;
